this my overview

--- a/Assignment-1/contact.html
+++ b/Assignment-1/contact.html
@@ -25,10 +25,10 @@
         <section>
             <form class="contact-form">
             <label for="name">name</label><br>
-            <input type="text" placeholder="Enter your name"><br>
+            <input type="text" name="name" id="name" placeholder="Enter your name" required><br>
 
             <label for="email">Email</label><br>
-            <input type="email" placeholder="Enter your email"><br>
+            <input type="email" name="email" id="email" placeholder="Enter your email" required><br>
 
             <label for="message">Message</label><br>
             <textarea placeholder="Please give us feedback" name="message" rows="5"></textarea>
@@ -38,9 +38,9 @@
         <article class="social">
             <h2>Follow us</h2>
             <ul>
-                <li><a href="">Facebook</a></li>
-                <li><a href="">Instagram</a></li>
-                <li><a href=""></a></li>
+                <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+                <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+                <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
             </ul>
             <div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, veritatis! Perferendis minus dicta quaerat aperiam debitis. Autem neque minima tenetur dignissimos harum aliquid dolore error laudantium nostrum similique! Tenetur, accusantium?</p>
@@ -50,8 +50,8 @@
     <aside>
         <h3>Club Office</h3>
         <p>Broad Street, Monrovia, Liberia</p>
-        <p><a href="mato">Email: info@fcfassell.com</a></p>
-        <p>>Phone: +231 77 654 3210</p>
+        <p><a href="mailto:info@fcfassell.com">Send Us Mail</a></p>
+        <p>Phone: +231 77 654 3210</p>
 
     </aside>
     <footer class="footer-section">
