--- a/Assignment-1/contact.html
+++ b/Assignment-1/contact.html
@@ -37,12 +37,14 @@
         </section>
         <article class="social">
             <h2>Follow us</h2>
+            <nav class="nav_bar">
             <ul>
                 <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
                 <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
                 <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
             </ul>
-            <div>
+            </nav>
+            <div class="hustle">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta, veritatis! Perferendis minus dicta quaerat aperiam debitis. Autem neque minima tenetur dignissimos harum aliquid dolore error laudantium nostrum similique! Tenetur, accusantium?</p>
             </div>
         </article>
