--- a/Assignment-1/about.html
+++ b/Assignment-1/about.html
@@ -74,7 +74,7 @@
             <p>FC Fassel is name after its founder, Mr. Fassel, who wnated to inspire Liberian youth through football</p>
         </aside>   
    </aside>
-   <footer>
+   <footer class="footer-section">
     <a href="#">Top</a>
      <p class="footer-section">&copy; 2025 FC Fassell | All Rights Reserved</p>
 </footer>
