--- a/Assignment-1/contact.html
+++ b/Assignment-1/contact.html
@@ -32,7 +32,7 @@
 
             <label for="message">Message</label><br>
             <textarea placeholder="Please give us feedback" name="message" rows="5"></textarea>
-            <button type="submit" class="btn">Send</button>
+            <button type="submit" class="button">Send</button>
             </form>
         </section>
         <article class="social">
