--- a/Assignment-1/about.html
+++ b/Assignment-1/about.html
@@ -71,7 +71,7 @@
     <aside>
       <aside>
             <h3>Did You Know?</h3>
-            <p>FC Fassel is name after its founder, Mr. Fassel, who wnated to inspire Liberian youth through football</p>
+            <p>FC Fassel is name after it founder, Mr. Fassel, who wnated to inspire Liberian youth through football</p>
         </aside>   
    </aside>
    <footer class="footer-section">
